# OOP_lab1

./: .gitignore  CMakeLists.txt
input_files/: lab01_input_correct_01.ini  lab01_input_correct_07.ini  lab01_input_correct_09.ini
src/: CMakeLists.txt  header.h  main.cpp  source.cpp
src/IniParser/: IniParser.cpp  IniParser.h  header.h  source.cpp
src/IniParserException/: IniParserException.cpp  IniParserException.h
